# wf22

./: Cargo.toml
wf2/: Cargo.toml
wf2/src/: main.rs
wf2_core/: Cargo.toml
wf2_core/src/: cli.rs  context.rs  lib.rs  task.rs
wf2_core/src/commands/: self_update.rs
wf2_core/src/recipes/: mod.rs
wf2_core/src/recipes/m2/: m2_cli.rs  mod.rs
wf2_core/src/recipes/m2/subcommands/: composer.rs  down.rs  mod.rs  up.rs
wf2_derive/: Cargo.toml
wf2_derive/src/: lib.rs
