[package]
name = "wf2_core"
version = "0.1.0"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wf2_derive = { version="0.1.0", path="../wf2_derive" }
structopt = "0.3.15"
anyhow = "1.0.31"


